--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Catálogo Hacker</title>
+  <title>Denuncia ciudadana</title>
   <style>
     /* Reset y base */
     * {
@@ -462,3 +462,4 @@ nav img {
   </script>
 </body>
 </html>
+
