--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ nav img {
     }
   }
 </style>
-<h3>Los invitamos a compartir esta informacion hasta que llegue a manos de sus Amigos de la Familia M , en espera de una pronta justicia social </h3>
+<h3>Los invitamos a compartir esta informacion hasta que llegue a manos de sus Amigos de la Familia M , en espera de una pronta justicia social<br> Para brindarnos mas informacion,trabajos bajo pedido y sabanas al: sindicatoliberta@proton.me</h3>
 
   <main class="container">
     <section id="extorsion" tabindex="-1">
@@ -462,4 +462,5 @@ nav img {
   </script>
 </body>
 </html>
+
 
