--- a/index.html
+++ b/index.html
@@ -557,11 +557,10 @@ nav img {
         <h3>Harry Gomes Polanco </h3>
 
 <p><strong>Fecha de nacimiento:</strong> 1981-12-20</p>
-<p><strong>Sexo:</strong> H</p>
-<p><strong>Código Postal (CP):</strong> 76117</p>
-<p><strong>Calle:</strong> El Jaripeo 107</p>
-<p><strong>Colonia:</strong> Galindas, queretaro </p>
-<p><strong>Exterior:</strong> #107</p>
+       <p><strong>Código Postal (CP):</strong> 52930</p>
+<p><strong>Calle:</strong> Cda. Lago Borneo 8, Cdad. López Mateos, Méx.</p>
+<p><strong>Colonia:</strong>Residencial Chiluca</p>
+<p><strong>Exterior:</strong> 8</p>
 
 
       </div>
@@ -573,12 +572,10 @@ nav img {
       <div class="persona-info">
         <h3>Tony Gomes Polanco (Tony julupesty)</h3>
        <p><strong>Fecha de nacimiento:</strong> 1985-09-10</p>
-<p><strong>Código Postal (CP):</strong> 52910</p>
-<p><strong>Calle:</strong> AV DE LAS FLORES</p>
-<p><strong>Colonia:</strong> COL SAGITARIO I</p>
-<p><strong>Exterior:</strong> MZ 215  LT 9</p>
-<p><strong>CURP:</strong> </p>
-<p><strong>CVE:</strong> </p>
+       <p><strong>Código Postal (CP):</strong> 52930</p>
+<p><strong>Calle:</strong> Cda. Lago Borneo 8, Cdad. López Mateos, Méx.</p>
+<p><strong>Colonia:</strong>Residencial Chiluca</p>
+<p><strong>Exterior:</strong> 8</p>
 
 
       </div>
@@ -590,13 +587,10 @@ nav img {
       <img src="1/lepe6.png" alt="Foto de María López" />
       <div class="persona-info">
         <h3>Marcos Gomes Polanco (Pinocho a la derecha)</h3>
-       <p><strong>Fecha de nacimiento:</strong> 1989-10-27</p>
-
-<p><strong>Código Postal (CP):</strong> 52949</p>
-<p><strong>Calle:</strong> AV DE LAS AGUILAS </p>
-<p><strong>Colonia:</strong> COL Las aguilas</p>
-<p><strong>Exterior:</strong> 92</p>
-<p><strong>CURP:</strong> </p>
+       <p><strong>Código Postal (CP):</strong> 52930</p>
+<p><strong>Calle:</strong> Cda. Lago Borneo 8, Cdad. López Mateos, Méx.</p>
+<p><strong>Colonia:</strong>Residencial Chiluca</p>
+<p><strong>Exterior:</strong> 8</p>
 
 
       </div>
@@ -1088,9 +1082,8 @@ nav img {
 
 <h3>Los invitamos a compartir esta informacion hasta que llegue a manos de todos los interesados, en espera de una pronta justicia social </h3>
  
-<h3>El procedimiento del fraude es sencillo :montan una pagina web similar a la de cuaquier empresa con sus logos ,se acreditan como empresa mandando constancia fiscal del rfc y solicitan el pago a una cuenta de algun tercero o de alguna empresa coludida en el fraude </h3>
-
 </body>
 </html>
+
 
 
