--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ nav img {
 </nav> <br>
 <br><br><h2>SOCIEDAD DEDICADA AL ROBO DE BEBES , VENTA DE ARMAS,EXTORSION  Y ESTAFA EN LINEA CON PAGINAS FALSAS (Todas las personas exhibidas estan involucradas y son familiares)</h2>
 
-<h3>OFRECEMOS LA INFORMACION DE LA SOCIEDAD CRIMINAL ,PARA QUE ESTA LLEGUE A MANOS DE POSIBLES INTERESADOS, A LA SOCIEDAD EN GENERAL, VICTIMAS Y PARA PREVENIR</h3>
+<h3>OFRECEMOS LA INFORMACION DE LA SOCIEDAD CRIMINAL PARA QUE ESTA LLEGUE A MANOS DE POSIBLES LUCHADORES SOCIALES,INTERESADOS, A LA SOCIEDAD EN GENERAL, VICTIMAS Y PARA PREVENIR</h3>
 
 <h3>Agradecemos cualquier informacion relevante ,ponemos a su disposicion nuestro correo sindicatoliberta@proton.me (SIN D)</h3>
 
@@ -361,6 +361,75 @@ nav img {
    
   
     <!-- Más tarjetas aquí -->
+  </div>
+</section>
+
+
+
+<section id="personas" tabindex="-1">
+  <h2>Venta de camiones mediante paginas falsas ,asi mismo de productos alimenticios y diversas mercancias ,su familia funge como mulas de dinero y contestando las llamadas de anuncios falsos </h2>
+  <div class="personas-grid">
+
+    <article class="persona-card">
+      <img src="1/op1.jpeg" alt="Foto de María López" />
+      <div class="persona-info">
+        <h3>JACOBO SALAZAR LOPEZ</h3>
+<p><strong>Código Postal (CP):</strong> 76230</p>
+<p><strong>Manzana (Mza):</strong> 9</p>
+<p><strong>Calle:</strong>C. Lago Zumpango 119</p>
+<p><strong>Colonia:</strong>  Cumbres del Lago , Juriquilla, Qro.</p>
+<p><strong>Exterior:</strong> 119</p>
+<p><strong>CURP:</strong> </p>
+<p><strong>CVE:</strong> </p>
+
+
+      </div>
+    </article>
+
+    <article class="persona-card">
+      <img src="1/op2.jpeg" alt="Foto de Juan Pérez" />
+      <div class="persona-info">
+        <h3> JUAN CARLOS SALAZAR RIVERA</h3>
+
+      </div>
+    </article>
+<article class="persona-card">
+      <img src="1/op3.jpeg" alt="Foto de Juan Pérez" />
+      <div class="persona-info">
+        <h3>PAOLA PATRICIA LOPEZ REYES </h3>
+
+      </div>
+    </article>
+
+
+    <article class="persona-card">
+      <img src="1/op4.jpeg" alt="Foto de María López" />
+          <div class="persona-info">
+        <h3>ISRAEL SALAZAR LOPEZ  </h3>
+
+      </div>
+    </article>
+
+
+
+
+    <article class="persona-card">
+      <img src="1/op5.jpeg" alt="Foto de María López" />
+    </article>
+
+
+        <article class="persona-card">
+      <img src="1/op6.jpeg" alt="Foto de María López" />
+    </article>
+    <article class="persona-card">
+      <img src="1/op7.jpeg" alt="Foto de María López" />
+    </article>
+<article class="persona-card">
+      <img src="1/op8.jpeg" alt="Foto de María López" />
+    </article>
+    <article class="persona-card">
+      <img src="1/op9.jpeg" alt="Foto de María López" />
+    </article>
   </div>
 </section>
 
@@ -1330,6 +1399,7 @@ nav img {
  
 </body>
 </html>
+
 
 
 
