--- a/index.html
+++ b/index.html
@@ -387,14 +387,14 @@ nav img {
     </article>
 
     <article class="persona-card">
-      <img src="1/op2.jpg" alt="Foto de Juan Pérez" />
+      <img src="1/op2.jpeg" alt="Foto de Juan Pérez" />
       <div class="persona-info">
         <h3> JUAN CARLOS SALAZAR RIVERA</h3>
 
       </div>
     </article>
 <article class="persona-card">
-      <img src="1/op3.jpg" alt="Foto de Juan Pérez" />
+      <img src="1/op3.jpeg" alt="Foto de Juan Pérez" />
       <div class="persona-info">
         <h3>PAOLA PATRICIA LOPEZ REYES </h3>
 
@@ -1399,6 +1399,7 @@ nav img {
  
 </body>
 </html>
+
 
 
 
